@@ -30,6 +30,7 @@ Standard library:
 
 Bug Fixes:
 - PR#5322: type abbreviations expanding to a universal type variable
+- PR#5330: thread tag with '.top' and '.inferred.mli' targets
 
 OCaml 3.12.1:
 ----------------------
